k8s/namespaces/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: finances-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-db
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: shared
